# fivedxp

./: .gitignore  CMakeLists.txt  README.md  bana.cpp  bana.h  config.cpp  config.h  config.json  hasp.hpp  hook.h  input.cpp  input.h  joystick.h  jvs.cpp  jvs.h  library.cpp  limiter.hpp  memory.cpp  memory.h  nsadrv.hpp  ssl.hpp  start.sh  str400.hpp  sysmonitor.hpp  touch.cpp  touch.h
.github/workflows/: build.yml
Include/: toml.hpp
